--- a/programas.html
+++ b/programas.html
@@ -78,7 +78,7 @@
                   <!-- /. ROW  --> 
 
     <div>
-    Firefox 3.6.3 <a href="/download/Firefox.exe">Download</a> 
+    Firefox 3.6.3 <a href="/controlespdm/download/Firefox.exe">Download</a> 
     </div>
 
                   <!-- /. ROW  --> 
