--- a/programas.html
+++ b/programas.html
@@ -80,7 +80,8 @@
     <div>
     Firefox 3.6.3 <a href="/controlespdm/download/Firefox.exe">Download</a> 
     </div>
-
+     Firefox 3.6.3 <a href="/controlespdm/download/Firefox.exe">Download</a>
+<div>
                   <!-- /. ROW  --> 
     </div>
 
